tests/snapshots/run_file__guide_if_age.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_if_age.bend
---
NumScott:
"you're an adult"

Scott:
"you're an adult"
