tests/snapshots/run_file__guide_is_even_str.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_is_even_str.bend
---
NumScott:
"odd"

Scott:
"odd"
