tests/snapshots/run_file__guide_list_match.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_list_match.bend
---
NumScott:
1

Scott:
1
