tests/snapshots/run_file__guide_shader_dummy.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_shader_dummy.bend
---
NumScott:
(((((1, 1), (1, 1)), ((1, 1), (1, 1))), (((1, 1), (1, 1)), ((1, 1), (1, 1)))), ((((1, 1), (1, 1)), ((1, 1), (1, 1))), (((1, 1), (1, 1)), ((1, 1), (1, 1)))))

Scott:
(((((1, 1), (1, 1)), ((1, 1), (1, 1))), (((1, 1), (1, 1)), ((1, 1), (1, 1)))), ((((1, 1), (1, 1)), ((1, 1), (1, 1))), (((1, 1), (1, 1)), ((1, 1), (1, 1)))))
